Modify user and user_item to use UID, add user_nutrition
