# internal/models/user.go
@@ -1,15 +1,17 @@
 package models
 
-type Role string
-
-const (
-	UserRole  Role = "user"
-	AdminRole Role = "admin"
-)
-
 type User struct {
-	ID       uint   `gorm:"primaryKey;autoIncrement" json:"id"`
-	Username string `gorm:"type:varchar(50);unique;not null" json:"username"`
-	Password string `gorm:"type:varchar(255);not null" json:"password"`
-	Role     Role   `gorm:"type:role;not null;default:'user'" json:"role"`
+	ID                string  `gorm:"primaryKey;type:varchar(255);not null" json:"id"`
+	Name              string  `gorm:"type:varchar(100)" json:"name"`
+	Gender            string  `gorm:"type:varchar(20)" json:"gender"`
+	Age               int     `gorm:"type:int" json:"age"`
+	Height            float64 `gorm:"type:decimal(5,2)" json:"height"`
+	HeightUnit        string  `gorm:"type:varchar(10)" json:"heightUnit"`
+	CurrentWeight     float64 `gorm:"type:decimal(5,2)" json:"currentWeight"`
+	CurrentWeightUnit string  `gorm:"type:varchar(10)" json:"currentWeightUnit"`
+	TargetWeight      float64 `gorm:"type:decimal(5,2)" json:"targetWeight"`
+	TargetWeightUnit  string  `gorm:"type:varchar(10)" json:"targetWeightUnit"`
+	ActivityLevel     string  `gorm:"type:varchar(50)" json:"activityLevel"`
+	DietType          string  `gorm:"type:varchar(50)" json:"dietType"`
+	Goal              string  `gorm:"type:varchar(50)" json:"goal"`
 }
